// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`private zones test suite first private zone should be updated 1`] = `
{
  "dimension": {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "scale": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`private zones test suite first private zone should be updated 2`] = `
{
  "dimension": {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "scale": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`private zones test suite instance should match the snapshot 1`] = `
{
  "createPrivateZone": [Function],
  "deletePrivateZone": [Function],
  "privateZones": Map {},
  "setSpatialEnvironment": [Function],
  "setSpatialPosition": [Function],
  "updatePrivateZone": [Function],
}
`;

exports[`private zones test suite private zones should be empty after deleting the last item 1`] = `
{
  "dimension": {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "scale": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`private zones test suite private zones should be empty after deleting the last item 2`] = `[]`;

exports[`private zones test suite returned zones should included the one just created 1`] = `
{
  "dimension": {
    "x": 2,
    "y": 2,
    "z": 2,
  },
  "origin": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "scale": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "videoRestriction": false,
}
`;

exports[`private zones test suite setSpatialEnvironment 1`] = `
{
  "forward": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "right": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "scale": {
    "x": 10,
    "y": 10,
    "z": 10,
  },
  "up": {
    "x": 1,
    "y": 1,
    "z": 1,
  },
}
`;
